# qu1

./: .gitignore  LICENSE  README.md  data.py  main.py  pyproject.toml  train.sh
qu1/: dumb_rng.py  evaluator.py  midi_data.py  rwkv_kernels.py  trainer.py
qu1/models/: __init__.py  channel_mix.py  common.py  config.py  model.py  rwkv_kernels.py  time_mix.py
scratch/: data.py  kernels.py
