[project]
name = "qu1"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "absl-py>=2.3.0",
    "datasets>=3.6.0",
    "equinox>=0.12.2",
    "jax[tpu]>=0.6.1",
    "loguru>=0.7.3",
    "matplotlib>=3.10.3",
    "midi2audio>=0.1.1",
    "miditok>=3.0.5.post1",
    "optax>=0.2.5",
    "safetensors>=0.6.0rc0",
    "simple-parsing>=0.1.7",
    "tensorboard>=2.19.0",
    "tensorboard-plugin-profile>=2.20.2",
    "tensorflow>=2.19.0",
    "torch>=2.7.1",
    "wandb>=0.21.0",
]

[[tool.uv.index]]
name = "pytorch"
url = "https://download.pytorch.org/whl/cpu"
explicit = true
[tool.uv]
prerelease = "allow"
[tool.uv.sources]
torch = [
    { index = "pytorch" },
]
triton = [
    { index = "pytorch" }
]
